--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# mysite_nginx.conf
+# nginx.conf
 
 # for added security (https://gist.github.com/plentz/6737338)
 server_tokens off;
@@ -7,7 +7,7 @@ add_header X-Content-Type-Options nosniff;
 
 # the upstream component nginx needs to connect to
 upstream django {
-    server unix:///home/vagrant/mysite/mysite.sock; # for a file socket
+    server unix:///vagrant/mysite/mysite.sock; # for a file socket
     # server 127.0.0.1:8001; # for a web port socket (we'll use this first)
 }
 
@@ -17,8 +17,8 @@ server {
     # listen      80;
 
     listen 443 default deferred ssl;
-    ssl_certificate /home/vagrant/mysite/server.crt;
-    ssl_certificate_key /home/vagrant/mysite/server.key;
+    ssl_certificate /vagrant/mysite/server.crt;
+    ssl_certificate_key /vagrant/mysite/server.key;
 
     # HSTS
     add_header Strict-Transport-Security "max-age=10; includeSubdomains;";
@@ -32,17 +32,17 @@ server {
 
     # Django media
     location /media  {
-        alias /home/vagrant/mysite/media;  # your Django project's media files - amend as required
+        alias /vagrant/mysite/media;  # your Django project's media files - amend as required
     }
 
     location /static {
-        alias /home/vagrant/mysite/static; # your Django project's static files - amend as required
+        alias /vagrant/mysite/static; # your Django project's static files - amend as required
     }
 
     # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
-        include     /home/vagrant/mysite/uwsgi_params; # the uwsgi_params file you installed
+        include     /vagrant/uwsgi_params; # the uwsgi_params file you installed
     }
 }
 
