The somedir2_repo test project works with this. Need to do the following: 1) store secret_key, etc. in file instead of environment variables 2) download vagrant box from internet 3) use SED to replace /mysite with /

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ add_header X-Content-Type-Options nosniff;
 
 # the upstream component nginx needs to connect to
 upstream django {
-    server unix:///vagrant/mysite/mysite.sock; # for a file socket
+    server unix:///vagrant/smelly.sock; # for a file socket
     # server 127.0.0.1:8001; # for a web port socket (we'll use this first)
 }
 
@@ -17,8 +17,8 @@ server {
     # listen      80;
 
     listen 443 default deferred ssl;
-    ssl_certificate /vagrant/mysite/server.crt;
-    ssl_certificate_key /vagrant/mysite/server.key;
+    ssl_certificate /vagrant/server.crt;
+    ssl_certificate_key /vagrant/server.key;
 
     # HSTS
     add_header Strict-Transport-Security "max-age=10; includeSubdomains;";
