--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,9 +1,9 @@
-# mysite_uwsgi.ini file
+# uwsgi.ini file
 [uwsgi]
 
 # Django-related settings
 # the base directory (full path)
-chdir           = /vagrant/mysite
+chdir           = /vagrant
 # Django's wsgi file
 module          = mysite.wsgi
 # the virtualenv (full path)
@@ -16,8 +16,13 @@ master          = true
 # maximum number of worker processes
 processes       = 10
 # the socket (use the full path to be safe
-socket          = /vagrant/mysite/mysite.sock
+socket          = /vagrant/smelly.sock
 # ... with appropriate permissions - may be needed
 chmod-socket    = 666
 # clear environment on exit
 vacuum          = true
+
+env = databases_default_name=db_name
+env = databases_default_user=db_user
+env = databases_default_password=db_password
+env = SECRET_KEY=SECRET_KEY
