changed the Vagrantfile to download my custom box, changed the ports to be > 1024 (8000, 8443)

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -3,9 +3,9 @@
 
 # Django-related settings
 # the base directory (full path)
-chdir           = /vagrant
+chdir           = /vagrant/mysite/mysite
 # Django's wsgi file
-module          = mysite.wsgi
+module          = wsgi
 # the virtualenv (full path)
 # home            = /home/vagrant/.virtualenvs/uwsgi-tutorial
 home            = /home/vagrant/.virtualenvs/mysite_venv
@@ -22,7 +22,3 @@ chmod-socket    = 666
 # clear environment on exit
 vacuum          = true
 
-env = databases_default_name=db_name
-env = databases_default_user=db_user
-env = databases_default_password=db_password
-env = SECRET_KEY=SECRET_KEY
