minor tweaks and corrections to get the server serving properly. The http redirect to https still doesn't work though

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ add_header X-Content-Type-Options nosniff;
 
 # the upstream component nginx needs to connect to
 upstream django {
-    server unix:///vagrant/smelly.sock; # for a file socket
+    server unix:///home/vagrant/smelly.sock; # for a file socket
     # server 127.0.0.1:8001; # for a web port socket (we'll use this first)
 }
 
