--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -16,7 +16,7 @@ master          = true
 # maximum number of worker processes
 processes       = 10
 # the socket (use the full path to be safe
-socket          = /vagrant/smelly.sock
+socket          = /home/vagrant/smelly.sock
 # ... with appropriate permissions - may be needed
 chmod-socket    = 666
 # clear environment on exit
